grails-app/assets/stylesheets/otp.less
/* ... */
.add-user-grid-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto auto;
    grid-template-areas:
            "select-int select-ext"
            "form-int form-ext"
            "submit submit";
    grid-gap: 8px;

    max-width: 1300px;
    padding-top: 10px;

    .select {
        &.internal {
            grid-area: select-int;
        }
        &.external {
            grid-area: select-ext;
        }
    }
    .form {
        input[type=text], select {
            width: 90%;
        }
        td:first-child {
            width: 1%;
            white-space: nowrap;
        }
        &.internal {
            grid-area: form-int;
        }
        &.external {
            grid-area: form-ext;
        }
    }
    .submit-container {
        grid-area: submit;

        display: grid;
        grid-template-columns: min-content 1fr;

        div {
            grid-row: 1;
        }
    }
    #add-button {
        width: auto;
        height: 100%;
        margin-right: 10px;
    }
}
.project-user-header-grid-wrapper {
    display: grid;
    grid-template-columns: min-content 1fr;

    .grid-element {
        grid-row: 1;
        margin-right: 30px;
    }
}
.ui-autocomplete {
    max-height: 200px;
    overflow-y: auto;
    overflow-x: hidden;
    border: 2px solid #DFDFDF;
}
.ui-menu .ui-menu-item {
    float: none;
    clear: none;
    td {
        border-right: 1px solid #DFDFDF;
        padding: 0px 5px 0px;
        white-space: nowrap;
    }
    tr {
        background: white;
    }
    tr:hover {
        background: #A5D3FF;
    }
}

.table-with-fixed-header {
    overflow-y: auto;
    max-height: 40ch;
    thead th {
        position: sticky;
        top: 0;
    }
}
.home {
    table {
        table-layout: fixed;
    }
    th:nth-child(1) {
        width: 10%;
    }
    th:nth-child(2) {
        width: 10%;
    }
    th:nth-child(3) {
        width: 50%;
    }
    th:nth-child(4) {
        width: 25%;
    }
    td:nth-child(1) {
        line-break: anywhere;
    }
}

.show_button {
    margin-bottom: 10px;
}
.refreshButton {
    input, a, div {
        .border-radius(0.3em);
        background-color: #DDD;
        border: 0;
        color: #666666;
        cursor: pointer;
        display: inline-block;
        margin: 0 0.25em 0;
        overflow: visible;
        padding: 0.25em 0.7em;
        text-decoration: none;
        &:hover, &:focus {
            .no-box-shadow;
            background-color: #999999;
            color: #ffffff;
            outline: none;
            text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
        }
    }
}
#notificationsTable_filter {
    display: block;
    margin-bottom: 10px;
}
.linkButton {
    float: right;
    margin-right: 1%;
    margin-bottom: 10px;
}
.overviewBody {
    position: relative;
    float: left;
    width: 3600px;
    overflow-x: hidden;
}
.overviewMenu {
    height: 30px;
    background-color: #F1F1F1;
}
.overviewContainer {
    float: left;
    width: calc(@width - 20);
    overflow-x: hidden;
}
.statistics {
    padding-right: 10px;
}
.table {
    padding-left: 10px;
    padding-right: 10px;
}
.graphics {
    padding-left: 10px;
}
.projectLabel {
    float: left;
    margin-top: 6px;
    margin-left: 15px;
}
.projectSelect {
    float: left;
    margin-top: 1px;
    margin-left: 10px;
}
.menuButton {
    margin-right: 1px;
    margin-top: 2px;
    float: right;
}
.statisticsTable {
    float: left;
    width: 100%;
    margin-top: 50px;
}
.statisticsTableLabel {
    margin-top: 20px;
    margin-left: 10px;
}

.project-selection-header-container {
    .two-column-grid-container();
    grid-gap: 24px;
    grid-template-columns: min-content 1fr;
}

.individual-grid-wrapper {
    .two-column-grid-container();
    grid-template-columns: 2fr 1fr;

    .individual-details {
        grid-column: 1 / span 2;
    }
}

.two-column-grid-container {
    display: grid;
    grid-template-columns: 1fr 1fr;

    .grid-element {
        grid-row: 1;
        &.comment-box {
            justify-self: end;
        }
    }
}

.project-selection-container {
    .rounded-page-header-box;

    display: grid;
    grid-template-columns: min-content min-content;
    grid-template-rows: auto auto;
    grid-template-areas:
            "selected-label selected-value"
            "select-label select";
    grid-gap: 2px;

    .selected-project-label {
        padding-right: 5px;
        grid-area: selected-label;
    }
    .selected-project-value {
        grid-area: selected-value;
    }
    .select-label {
        grid-area: select-label;
        align-self: center;
    }
    .project-dropdown {
        grid-area: select;
    }
}

.projectSelectMultiple {
    margin-top:-25px;
    margin-left: 14px;
    margin-bottom:-10px;
    background-color: #FCFCFC;
}
.dataTable_search {
    border-collapse: separate;
    .border-radius(12px);
    height: auto;
    border: 3.8px solid #CCCCCC;
    padding: 0.3em 1.15em;
    font-size: 10pt;
}

.dataTables_length {
    display: none;
}
.inline-element {
    display: inline;
}
.sample-identifiers-field-label {
    display: inline;
}

.optional {
    color: blue;
    text-align:right;
}

#processInfoBox {
    float: left;
    width: 750px;
}

#comment-box-container {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto auto auto;
    grid-gap: 2px;
}

.commentSet {
    background-image: url(document-edit.png);
    background-color: transparent;
    background-repeat: no-repeat;
    border: 0px;
}

#workflowOverviewTable {
    td:nth-child(3) {max-width: 500px;}
    td:nth-child(6) {max-width: 200px;}
    td:nth-child(8) {width: 20px;}
}

#processOverview {
    &:not(*:root) {margin-top: 0px;}

    td:nth-child(3) {max-width: 400px;}
    td:nth-child(4) {max-width: 200px;}
}

#clusterJobGeneralTableContainer {
    height: 350px;
    border: 1px solid black;
}
/* ... */

